tests/baselines/reference/parserMemberAccessorDeclaration8(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessorDeclaration8.ts(2,12): error TS1434: Unexpected keyword or identifier.
parserMemberAccessorDeclaration8.ts(2,23): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessorDeclaration8.ts (2 errors) ====
    class C {
        static static get Foo() { }
               ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
                          ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }